# avge-engine

./: .coverage  .gitignore  .mcp.json  Makefile  README.md  avge-tool-feedback.md  build_kids_room.py  design-guidelines.md  mvp_tdd.md  pyproject.toml  tdd.md
avge_engine/: __init__.py  __main__.py  api.py  api_viewer.py  scene.py  schema_registry.py  server.py
avge_mvp/: __init__.py  __main__.py  curve_engine.py  renderer.py  scene.py  server.py
docs/: TOOL_REFERENCE.md  design-guidelines.md  environment-guidelines.md  examples.md  tool-improvement-backlog.md
output/: COMPARISON.md  SUMMARY.md
prompts/: benchmark.json
schemas/: _defs.json  add_depth_shadow.json  add_shading.json  apply_brush_style.json  apply_depth_haze.json  apply_fx.json  apply_line_hierarchy.json  apply_texture_effect.json  batch.json  cast_shadow.json  checkpoint.json  clone_document.json  create_comic_panel_layout.json  create_document.json  create_element.json  create_ellipse_band.json  create_facade_grid.json  create_line_pattern.json  create_perspective_grid.json  create_region.json  create_shadow.json  create_surface_stripes.json  critique.json  critique_preview.json  delete_element.json  delete_region.json  describe_scene.json  duplicate.json  duplicate_element.json  duplicate_region.json  edit_element.json  edit_elements.json  edit_region.json  edit_regions.json  export_svg.json  find_objects.json  generate_background_asset.json  generate_cloud.json  get_document.json  insert_image.json  (+12 more)
scripts/: migrate_compact_storage.py
tests/: conftest.py  smoke_test.py  test_color.py  (+29 more)
(+78 files in other folders)
